--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
+    "formik": "^2.4.6",
     "gsap": "^3.12.5",
     "i18next": "^24.2.0",
     "i18next-http-backend": "^3.0.1",
@@ -37,7 +38,8 @@
     "react-icons": "^5.4.0",
     "react-vertical-timeline-component": "^3.5.3",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
