--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@gsap/react": "^2.1.1",
+    "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-progress": "^1.1.1",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.1.2",
     "apexcharts": "^4.3.0",
     "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.1",
@@ -28,6 +31,7 @@
     "next": "15.1.3",
     "next-i18n-router": "^5.5.1",
     "next-intl": "^3.26.3",
+    "next-themes": "^0.4.4",
     "prettier-plugin-tailwindcss": "^0.6.9",
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
@@ -37,6 +41,7 @@
     "react-i18next": "^15.4.0",
     "react-icons": "^5.4.0",
     "react-vertical-timeline-component": "^3.5.3",
+    "sonner": "^1.7.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "yup": "^1.6.1"
