--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "gsap": "^3.12.5",
     "i18next": "^24.2.0",
     "i18next-http-backend": "^3.0.1",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.469.0",
+    "motion": "^11.16.1",
     "next": "15.1.3",
     "next-i18n-router": "^5.5.1",
     "next-intl": "^3.26.3",
