--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dom": "^19.0.0",
     "react-i18next": "^15.4.0",
     "react-icons": "^5.4.0",
+    "react-intersection-observer": "^9.14.1",
     "react-vertical-timeline-component": "^3.5.3",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.6.0",
