--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-progress": "^1.1.1",
+    "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.2",
@@ -28,6 +29,8 @@
     "gsap": "^3.12.5",
     "i18next": "^24.2.0",
     "i18next-http-backend": "^3.0.1",
+    "libphonenumber-js": "^1.11.17",
+    "lottie-web": "^5.12.2",
     "lucide-react": "^0.469.0",
     "motion": "^11.16.1",
     "next": "15.1.3",
