--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "gsap": "^3.12.5",
     "i18next": "^24.2.0",
     "i18next-http-backend": "^3.0.1",
-    "libphonenumber-js": "^1.11.17",
     "lottie-web": "^5.12.2",
     "lucide-react": "^0.469.0",
     "motion": "^11.16.1",
@@ -46,6 +45,7 @@
     "react-i18next": "^15.4.0",
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.14.1",
+    "react-phone-input-2": "^2.15.1",
     "react-vertical-timeline-component": "^3.5.3",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.6.0",
